--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -52,7 +52,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintWidth_percent="50" />
 
-    <SeekBar
+    <androidx.appcompat.widget.AppCompatSeekBar
         android:id="@+id/playerFragmentAudioSeekBar"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="match_parent"
@@ -97,22 +97,23 @@
                 android:layout_height="@dimen/notification_button_size"
                 android:layout_gravity="center_horizontal"
                 android:background="@drawable/ic_play_circle_filled_black_48dp"
-                tools:visibility="gone"
-                android:visibility="invisible" />
+                android:visibility="invisible"
+                tools:visibility="gone" />
 
             <echomskfan.gmail.com.widgetslib.NightModeAwareButton
                 android:id="@+id/fragmentPlayerPauseButton"
                 android:layout_width="@dimen/notification_button_size"
                 android:layout_height="@dimen/notification_button_size"
                 android:layout_gravity="center_horizontal"
-                tools:visibility="gone"
-                android:background="@drawable/ic_pause_circle_filled_black_48dp" />
+                android:background="@drawable/ic_pause_circle_filled_black_48dp"
+                tools:visibility="gone" />
 
             <ProgressBar
                 android:id="@+id/fragmentPlayerProgressBar"
                 android:layout_width="@dimen/notification_button_size"
                 android:layout_height="@dimen/notification_button_size"
-                android:layout_gravity="center_horizontal" />
+                android:layout_gravity="center_horizontal"
+                android:visibility="gone" />
         </FrameLayout>
 
         <TextView
